Make MicroGraph an abstract class
Instead of introducing a new base class called MicroGraphInfo, this
commit makes MicroGraph the abstract base class and moves the
implementation of MicroGraph to MicroInterpreterGraph. The kernel
changes were all reverted, as they'll use MicroGraph instead of
MicroGraphInfo. The Interpreter and related test infrastructure will all
use the MicroInterpreterContext class.

--- a/tensorflow/lite/micro/kernels/BUILD
+++ b/tensorflow/lite/micro/kernels/BUILD
@@ -348,7 +348,7 @@ tflm_kernel_cc_library(
         "//tensorflow/lite/kernels/internal:types",
         "//tensorflow/lite/micro:flatbuffer_utils",
         "//tensorflow/lite/micro:memory_helpers",
-        "//tensorflow/lite/micro:micro_graph_info",
+        "//tensorflow/lite/micro:micro_graph",
         "//tensorflow/lite/micro:micro_log",
         "//tensorflow/lite/micro:micro_utils",
         "//tensorflow/lite/schema:schema_fbs",
