Create Make helpers for running codegen
The codegen process is a multi-step process that requires compiling,
executing code under simulation, and executing python scripts. To
simplify this workflow, this commit adds Make helper functions for
generating inference source code from a model and creating a binary with
it.

It also updates the hello world example to use these helpers and adds an
update script for keeping the checked in generated source in sync.

--- a/codegen/examples/hello_world/Makefile.inc
+++ b/codegen/examples/hello_world/Makefile.inc
@@ -10,5 +10,6 @@ $(TENSORFLOW_ROOT)codegen/examples/hello_world/hello_world_model.h \
 $(TENSORFLOW_ROOT)codegen/runtime/micro_codegen_context.h
 
 # Builds a standalone binary.
-$(eval $(call microlite_test,codegen_hello_world,\
-$(CODEGEN_HELLO_WORLD_SRCS),,))
+$(eval $(call codegen_model_binary,codegen_hello_world,hello_world_model,\
+$(CODEGEN_HELLO_WORLD_MODEL),$(CODEGEN_HELLO_WORLD_SRCS),,))
+
