Disable bluepill, hexagon and riscv
Also eliminates needs for codegen examples to specify the runtime
objects

--- a/codegen/examples/hello_world/Makefile.inc
+++ b/codegen/examples/hello_world/Makefile.inc
@@ -1,13 +1,8 @@
-# TODO(rjascani): The codegen runtime files (ie, in runtime subdir) should be a
-# separate library.
-CODEGEN_HELLO_WORLD_SRCS := \
-$(TENSORFLOW_ROOT)codegen/examples/hello_world/hello_world.cc \
-$(TENSORFLOW_ROOT)codegen/examples/hello_world/hello_world_model.cc \
-$(TENSORFLOW_ROOT)codegen/runtime/micro_codegen_context.cc
+CODEGEN_HELLO_WORLD_MODEL := \
+$(TENSORFLOW_ROOT)tensorflow/lite/micro/examples/hello_world/models/hello_world_int8.tflite
 
-CODEGEN_HELLO_WORLD_HDRS := \
-$(TENSORFLOW_ROOT)codegen/examples/hello_world/hello_world_model.h \
-$(TENSORFLOW_ROOT)codegen/runtime/micro_codegen_context.h
+CODEGEN_HELLO_WORLD_SRCS := \
+$(TENSORFLOW_ROOT)codegen/examples/hello_world/hello_world.cc
 
 # Builds a standalone binary.
 $(eval $(call codegen_model_binary,codegen_hello_world,hello_world_model,\
