--- a/ci/Dockerfile.xtensa_xplorer_13
+++ b/ci/Dockerfile.xtensa_xplorer_13
@@ -21,8 +21,8 @@ COPY ./XtensaTools_RI_2022_9_linux.tgz .
 COPY ./F1_190305_swupgrade_linux.tgz .
 COPY ./P6_200528_linux.tgz .
 COPY ./HIFI_190304_swupgrade_linux.tgz .
-COPY ./install_cores_xplorer_13.sh .
-
+COPY ci/install_cores_xplorer_13.sh .
+COPY ci/install_bazelisk.sh .
 
 RUN \
   python3 -m pip install -U --force-reinstall pip
@@ -42,6 +42,8 @@ ENV XTENSA_BASE "/opt/xtensa/XtDevTools/install/"
 RUN \
   chmod +x install_cores_xplorer_13.sh && \
   ./install_cores_xplorer_13.sh
+
+RUN ./install_bazelisk.sh
 
 RUN \
   rm Xplorer-8.0.13-linux-x64-installer.bin && \
