--- a/ci/Dockerfile.xtensa_xplorer_11
+++ b/ci/Dockerfile.xtensa_xplorer_11
@@ -1,4 +1,4 @@
-FROM ubuntu:bionic
+FROM python:3.10-bullseye
 ENV DEBIAN_FRONTEND noninterative
 
 RUN \
@@ -9,10 +9,7 @@ RUN \
     curl \
     git \
     unzip \
-    wget \
-    python3 \
-    python \
-    python3-pip
+    wget
 
 WORKDIR /opt/xtensa
 
@@ -21,9 +18,6 @@ COPY ./mini1m1m_RI_2019_2_linux_w_keys.tgz .
 COPY ./XtensaTools_RI_2022_9_linux.tgz .
 COPY ci/install_cores_xplorer_11.sh .
 COPY ci/install_bazelisk.sh .
-
-RUN \
-  python3 -m pip install -U --force-reinstall pip
 
 RUN \
   pip3 install Pillow
