Change micro_speech example
@tensorflow/micro

Create Python examples that use Signal Ops Library.
Create Python examples for micro_speech model prediction.
Update README documentation.
Update images.
Add additional speech sample files (silence, noise) to testdata directory.
Add audio preprocessing models to models  directory.
Update Bazel BUILD files.
Update Makefiles

bug=fixes  #2248

--- a/python/tflite_micro/signal/BUILD
+++ b/python/tflite_micro/signal/BUILD
@@ -33,7 +33,7 @@ py_library(
         "ops/__init__.py",
     ],
     srcs_version = "PY3",
-    visibility = ["//python/tflite_micro/signal/utils:__subpackages__"],
+    visibility = ["//visibility:public"],
     deps = [
         ":delay_op",
         ":energy_op",
