optimized signal files

--- a/signal/micro/kernels/BUILD
+++ b/signal/micro/kernels/BUILD
@@ -11,10 +11,12 @@ cc_library(
         "delay.cc",
         "energy.cc",
         "fft_auto_scale.cc",
+        "fft_auto_scale_common.cc",
         "filter_bank.cc",
         "filter_bank_log.cc",
         "filter_bank_spectral_subtraction.cc",
         "filter_bank_square_root.cc",
+        "filter_bank_square_root_common.cc",
         "framer.cc",
         "irfft.cc",
         "overlap_add.cc",
@@ -24,6 +26,8 @@ cc_library(
         "window.cc",
     ],
     hdrs = [
+        "fft_auto_scale.h",
+        "filter_bank_square_root.h",
         "irfft.h",
         "rfft.h",
     ],
@@ -45,6 +49,7 @@ cc_library(
         "//signal/src:rfft",
         "//signal/src:window",
         "//tensorflow/lite:type_to_tflitetype",
+        "//tensorflow/lite/c:common",
         "//tensorflow/lite/kernels:kernel_util",
         "//tensorflow/lite/kernels/internal:tensor",
         "//tensorflow/lite/micro:flatbuffer_utils",
