--- a/tensorflow/lite/micro/tools/make/Makefile
+++ b/tensorflow/lite/micro/tools/make/Makefile
@@ -330,44 +330,6 @@ $(TENSORFLOW_ROOT)tensorflow/lite/micro/memory_planner/linear_memory_planner_tes
 $(TENSORFLOW_ROOT)tensorflow/lite/micro/memory_planner/non_persistent_buffer_planner_shim_test.cc
 
 MICROLITE_CC_KERNEL_SRCS := \
-$(TENSORFLOW_ROOT)signal/micro/kernels/delay.cc \
-$(TENSORFLOW_ROOT)signal/micro/kernels/energy.cc \
-$(TENSORFLOW_ROOT)signal/micro/kernels/fft_auto_scale_kernel.cc \
-$(TENSORFLOW_ROOT)signal/micro/kernels/fft_auto_scale_common.cc \
-$(TENSORFLOW_ROOT)signal/micro/kernels/filter_bank.cc \
-$(TENSORFLOW_ROOT)signal/micro/kernels/filter_bank_log.cc \
-$(TENSORFLOW_ROOT)signal/micro/kernels/filter_bank_square_root.cc \
-$(TENSORFLOW_ROOT)signal/micro/kernels/filter_bank_square_root_common.cc \
-$(TENSORFLOW_ROOT)signal/micro/kernels/filter_bank_spectral_subtraction.cc \
-$(TENSORFLOW_ROOT)signal/micro/kernels/framer.cc \
-$(TENSORFLOW_ROOT)signal/micro/kernels/irfft.cc \
-$(TENSORFLOW_ROOT)signal/micro/kernels/rfft.cc \
-$(TENSORFLOW_ROOT)signal/micro/kernels/stacker.cc \
-$(TENSORFLOW_ROOT)signal/micro/kernels/overlap_add.cc \
-$(TENSORFLOW_ROOT)signal/micro/kernels/pcan.cc \
-$(TENSORFLOW_ROOT)signal/micro/kernels/window.cc \
-$(TENSORFLOW_ROOT)signal/src/circular_buffer.cc \
-$(TENSORFLOW_ROOT)signal/src/energy.cc \
-$(TENSORFLOW_ROOT)signal/src/fft_auto_scale.cc \
-$(TENSORFLOW_ROOT)signal/src/filter_bank.cc \
-$(TENSORFLOW_ROOT)signal/src/filter_bank_log.cc \
-$(TENSORFLOW_ROOT)signal/src/filter_bank_square_root.cc \
-$(TENSORFLOW_ROOT)signal/src/filter_bank_spectral_subtraction.cc \
-$(TENSORFLOW_ROOT)signal/src/irfft_float.cc \
-$(TENSORFLOW_ROOT)signal/src/irfft_int16.cc \
-$(TENSORFLOW_ROOT)signal/src/irfft_int32.cc \
-$(TENSORFLOW_ROOT)signal/src/log.cc \
-$(TENSORFLOW_ROOT)signal/src/max_abs.cc \
-$(TENSORFLOW_ROOT)signal/src/msb_32.cc \
-$(TENSORFLOW_ROOT)signal/src/msb_64.cc \
-$(TENSORFLOW_ROOT)signal/src/overlap_add.cc \
-$(TENSORFLOW_ROOT)signal/src/pcan_argc_fixed.cc \
-$(TENSORFLOW_ROOT)signal/src/rfft_float.cc \
-$(TENSORFLOW_ROOT)signal/src/rfft_int16.cc \
-$(TENSORFLOW_ROOT)signal/src/rfft_int32.cc \
-$(TENSORFLOW_ROOT)signal/src/square_root_32.cc \
-$(TENSORFLOW_ROOT)signal/src/square_root_64.cc \
-$(TENSORFLOW_ROOT)signal/src/window.cc \
 $(TENSORFLOW_ROOT)tensorflow/lite/micro/kernels/activations.cc \
 $(TENSORFLOW_ROOT)tensorflow/lite/micro/kernels/activations_common.cc \
 $(TENSORFLOW_ROOT)tensorflow/lite/micro/kernels/add.cc \
@@ -473,6 +435,46 @@ $(TENSORFLOW_ROOT)tensorflow/lite/micro/kernels/unpack.cc \
 $(TENSORFLOW_ROOT)tensorflow/lite/micro/kernels/var_handle.cc \
 $(TENSORFLOW_ROOT)tensorflow/lite/micro/kernels/while.cc \
 $(TENSORFLOW_ROOT)tensorflow/lite/micro/kernels/zeros_like.cc
+
+MICROLITE_CC_SIGNAL_KERNEL_SRCS := \
+$(TENSORFLOW_ROOT)signal/micro/kernels/delay.cc \
+$(TENSORFLOW_ROOT)signal/micro/kernels/energy.cc \
+$(TENSORFLOW_ROOT)signal/micro/kernels/fft_auto_scale_kernel.cc \
+$(TENSORFLOW_ROOT)signal/micro/kernels/fft_auto_scale_common.cc \
+$(TENSORFLOW_ROOT)signal/micro/kernels/filter_bank.cc \
+$(TENSORFLOW_ROOT)signal/micro/kernels/filter_bank_log.cc \
+$(TENSORFLOW_ROOT)signal/micro/kernels/filter_bank_square_root.cc \
+$(TENSORFLOW_ROOT)signal/micro/kernels/filter_bank_square_root_common.cc \
+$(TENSORFLOW_ROOT)signal/micro/kernels/filter_bank_spectral_subtraction.cc \
+$(TENSORFLOW_ROOT)signal/micro/kernels/framer.cc \
+$(TENSORFLOW_ROOT)signal/micro/kernels/irfft.cc \
+$(TENSORFLOW_ROOT)signal/micro/kernels/rfft.cc \
+$(TENSORFLOW_ROOT)signal/micro/kernels/stacker.cc \
+$(TENSORFLOW_ROOT)signal/micro/kernels/overlap_add.cc \
+$(TENSORFLOW_ROOT)signal/micro/kernels/pcan.cc \
+$(TENSORFLOW_ROOT)signal/micro/kernels/window.cc \
+$(TENSORFLOW_ROOT)signal/src/circular_buffer.cc \
+$(TENSORFLOW_ROOT)signal/src/energy.cc \
+$(TENSORFLOW_ROOT)signal/src/fft_auto_scale.cc \
+$(TENSORFLOW_ROOT)signal/src/filter_bank.cc \
+$(TENSORFLOW_ROOT)signal/src/filter_bank_log.cc \
+$(TENSORFLOW_ROOT)signal/src/filter_bank_square_root.cc \
+$(TENSORFLOW_ROOT)signal/src/filter_bank_spectral_subtraction.cc \
+$(TENSORFLOW_ROOT)signal/src/irfft_float.cc \
+$(TENSORFLOW_ROOT)signal/src/irfft_int16.cc \
+$(TENSORFLOW_ROOT)signal/src/irfft_int32.cc \
+$(TENSORFLOW_ROOT)signal/src/log.cc \
+$(TENSORFLOW_ROOT)signal/src/max_abs.cc \
+$(TENSORFLOW_ROOT)signal/src/msb_32.cc \
+$(TENSORFLOW_ROOT)signal/src/msb_64.cc \
+$(TENSORFLOW_ROOT)signal/src/overlap_add.cc \
+$(TENSORFLOW_ROOT)signal/src/pcan_argc_fixed.cc \
+$(TENSORFLOW_ROOT)signal/src/rfft_float.cc \
+$(TENSORFLOW_ROOT)signal/src/rfft_int16.cc \
+$(TENSORFLOW_ROOT)signal/src/rfft_int32.cc \
+$(TENSORFLOW_ROOT)signal/src/square_root_32.cc \
+$(TENSORFLOW_ROOT)signal/src/square_root_64.cc \
+$(TENSORFLOW_ROOT)signal/src/window.cc
 
 MICROLITE_TEST_HDRS := \
 $(wildcard $(TENSORFLOW_ROOT)tensorflow/lite/micro/testing/*.h)
@@ -648,8 +650,8 @@ ifneq ($(OPTIMIZED_KERNEL_DIR),)
     endif
 
     # Specialize for the optimized kernels
-    MICROLITE_CC_KERNEL_SRCS := $(shell python3 $(MAKEFILE_DIR)/specialize_files.py \
-      --base_files "$(MICROLITE_CC_KERNEL_SRCS)" \
+    MICROLITE_CC_SIGNAL_KERNEL_SRCS := $(shell python3 $(MAKEFILE_DIR)/specialize_files.py \
+      --base_files "$(MICROLITE_CC_SIGNAL_KERNEL_SRCS)" \
       --specialize_directory $(PATH_TO_SIGNAL_OPTIMIZED_KERNELS))
     MICROLITE_CC_KERNEL_SRCS += $(wildcard $(PATH_TO_SIGNAL_OPTIMIZED_KERNELS)/*.S)
     MICROLITE_CC_HDRS += $(wildcard $(PATH_TO_SIGNAL_OPTIMIZED_KERNELS)/*.h)
@@ -669,6 +671,8 @@ ifneq ($(OPTIMIZED_KERNEL_DIR),)
   # list of headers.
   MICROLITE_CC_HDRS += $(wildcard $(PATH_TO_OPTIMIZED_KERNELS)/*.h)
 endif
+
+MICROLITE_CC_KERNEL_SRCS += $(MICROLITE_CC_SIGNAL_KERNEL_SRCS)
 
 # If a co-processor is specified on the command line with
 # CO_PROCESSOR=<co_processor> then we will include ext_libs/<co_processor>.inc
